Attempt to avoid some layout shift by setting a width in the org icon column.

--- a/app/assets/stylesheets/organizations.scss
+++ b/app/assets/stylesheets/organizations.scss
@@ -18,6 +18,10 @@
 
 // Table of all organizations
 .organizations {
+  .icon-column {
+    min-width: 68px; // Try to avoid some layout shifting when icons are rendered
+  }
+
   .files-column {
     width: 6ch;
   }
